zeit.content.cp changes
=======================

0.34.1 (unreleased)
-------------------

- Errors in editors actions are logged as warning now.

- Fullgraphical block doesn't break CPE if the referenced object is removed
  (#7093).


0.34.0 (2010-04-09)
-------------------

- Brightcove-Videos integriert (#6881).

- Favicon zu RSS-Feed speichern (#6937).

- Using versions from the ZTK.


0.33.0 (2010-03-10)
-------------------

- »Doubletten vermeiden« kann wieder deaktiviert werden (#6731)

- Asset-Tab für CPs aktiviert (#6876).

- Die Felder CAP-Kontext und CAP-Titel von der Centerpage direkt entfernt und
  auf allen Objekten mit Standardmetadaten verfügbar gemacht (#6923).

- Ist ein Objekt im RSS-Feed kommt ein freier Teaser dieses Objekts nicht mehr
  in den RSS-Feed und umgekehrt (#6724).

  
0.32.1 (2010-02-23)
-------------------

- Anzahl der Feeditems mind. so groß wie der Aufmacher (#6865)

0.32.0 (2010-02-08)
-------------------

- ``cp_extra`` Block hinzugefügt: solr-month (#6749)

- ``cp_extra`` Block hinzugefügt: dwds-ticker (#6749)

- ``cp_extra`` Block hinzugefügt: recensionsearch

- ``cp_extra`` Block hinzugefügt: sportextra

0.31 (2009-12-18)
-----------------

- Bestätigung beim Löschen von Elementen entfernt (#6412).
- Neue Felder: CAP title, CAP context (#6598).


0.30.0 (2009-12-11)
-------------------

- ``cp_extra`` Block hinzugefügt: linkatory

- ``cp_extra`` Block hinzugefügt: homepage_news_pics

- Teaser-Block im Autopilot: Doubletten-Vermeidung ist standardmäßig aktiviert
  (#6243).

0.29.0 (2009-11-25)
-------------------

- Fehlerhaftes Markup im Raw-XML-Block wird repariert (#6431).


0.28.1 (2009-11-04)
-------------------

- Asynchronse Requests serialisiert damit das Löschen beim Verschieben von
  Teaseren zuverlässig funktioniert.

- Bild des ersten Teasers ist jetzt draggable.

- Wird ein Teaser im CPE verschoben und auf eine Landezone gezogen, werden die
  Relateds nicht mehr automatisch gezogen.
